# EL-WaterDemandTS

./: 1D-CNN.ipynb  Bagging.ipynb  Bootstrapping.ipynb  README.md  RF_Classification_.ipynb  RF_Regression_.ipynb  preprocessing.ipynb  pyproject.toml
data/: Time 1day_Mains.csv  bucket.csv  dataset.csv  dataset_parameters.csv  oneday_kitchen.csv
data/csv_Shower/: 1_spline.csv
data/csv_Washbasin/: 0_spline.csv
data/csv_Washbasin/cluster_0/: 10.csv  101.csv  105.csv  113.csv  114.csv  117.csv  12.csv  16.csv  20.csv  24.csv  43.csv  46.csv  49.csv  57.csv  58.csv  61.csv  66.csv  68.csv  69.csv  72.csv  77.csv  81.csv  89.csv  98.csv  99.csv
data_raw/: feed_Washbasin.MYD.csv
test_goto/: ML_WD.ipynb
