[tool.poetry]
name = "el-waterdemandts"
version = "0.1.0"
description = ""
authors = ["stryig0033 <000stryig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
japanize-matplotlib = "^1.1.3"
torch = "^2.5.0"
torchvision = "^0.20.0"
torchaudio = "^2.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
